# gcps3

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  BACKENDS.md  REFERENCES.md  VISION.md  codex.md  index.html  styles.css
include/gcps3/: backend.h  config.h  dvd.h  gx.h  gx_types.h  log.h  os.h  pad.h  runtime.h
samples/gx_clear/: main.c
samples/gx_compat_indexed_quad/: main.c
samples/gx_compat_quad/: main.c
samples/gx_compat_textured_quad/: main.c
samples/gx_compat_textured_triangle/: main.c
samples/gx_compat_triangle/: main.c
samples/gx_matrix/: main.c
samples/gx_textured_cube/: main.c
samples/gx_textured_triangle/: main.c
samples/gx_triangle/: main.c
samples/gx_validation/: main.c
samples/gx_vtxdesc/: main.c
samples/hello_runtime/: main.c
src/backends/pc/: gxnull.c  gxpc.c  pc_dvd.c  pc_main.c  pc_pad.c
src/backends/ps3/: gxrsx.c  ps3_dvd.c  ps3_main.c  ps3_pad.c
src/core/: backend.c  config.c  log.c  runtime.c
src/dvd/: dvd_common.c
src/gx/: gx_frontend.c  gx_internal.h  gx_state.c
src/os/: os_common.c
src/pad/: pad_common.c
